# Crypto-Bigdata-Platform

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
docker/Ingestion/: Dockerfile
docker/Stream/: Dockerfile
src/collectors/: base_collector.py  batch_collector.py  stream_collector.py
src/data_processing/stream/: export_kafka_to_csv.py
src/ml/training/: train_models.py
src/services/binance/: __init__.py  client.py
src/services/kafka/: __init__.py  client.py
src/utils/: __init__.py  helper.py  logger.py  settings.py
